# GrokkingDeepLearningPlusPlus

./: README.md
bi_directional_learning/: main.cpp
compare_and_learn/: main.cpp
grad_descent_multi_in_one_out/: main.cpp
grad_descent_multi_in_out/: CMakeLists.txt  main.cpp
grad_descent_multi_in_out/app/: app.cpp
grad_descent_multi_in_out/include/matrix/: matrix.hpp
grad_descent_multi_out_one_in/: Makefile  main.cpp
hot_and_cold_learning_example/: main.cpp
matrix_nn/: CMakeLists.txt
matrix_nn/app/: CMakeLists.txt  app.cpp
matrix_nn/include/matrix/: matrix.hpp
matrix_nn/include/test_matrix/: test_matrix_utils.hpp
matrix_nn/tests/: CMakeLists.txt  inner_prod.cpp
multi_input_linear_neural_network/: CMakeLists.txt  main.cpp
multi_out_lnn/: CMakeLists.txt
multi_out_lnn/app/: CMakeLists.txt  app.cpp
multi_out_lnn/include/linear_nn/: linear_nn.hpp
multi_out_lnn/src/: CMakeLists.txt  linear_nn_impl.cpp
my_first_neural_network/: CMakeLists.txt  main.cpp
one_iter_gradient_descent/: main.cpp  second_gradient_example.cpp  third_gradient_example_with_alpha.cpp
three_layer_network/: CMakeLists.txt
three_layer_network/app/: CMakeLists.txt  app.cpp
three_layer_network/include/iterator/: matrix_iterator.hpp
three_layer_network/include/matrix/: matrix.hpp
vector_math/: CMakeLists.txt
vector_math/app/: CMakeLists.txt  apps.cpp
vector_math/docs/: CMakeLists.txt  common.md
vector_math/include/vector_utils/: vector_utils.hpp
vector_math/src/: CMakeLists.txt  vector_utils_impl.cpp
vector_math/tests/: CMakeLists.txt  avg_test.cpp  dot_product_test.cpp  ele_add.cpp  ele_mult.cpp  sum_test.cpp
